Update BG testing

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 
       /* One Piece themed styles */
       .onepiece-theme .board {
-        background-image: url("./onepiece-bg.jpg");
+        background-image: url("./onep.png");
         background-size: cover;
         background-position: center;
         border: 5px solid #d4af37; /* Gold border */
@@ -297,7 +297,7 @@
 
       /* Add or update these CSS rules */
       .onepiece-theme {
-        background: url("./onepiece-bg.jpg") center/cover no-repeat fixed !important;
+        background: url("./onep.png") center/cover no-repeat fixed !important;
       }
 
       .onepiece-theme #game {
@@ -307,7 +307,7 @@
       }
 
       .onepiece-theme .board {
-        background-image: url("./onepiece-bg.jpg");
+        background-image: url("./onep.png");
         background-size: cover;
         background-position: center;
         border: 5px solid #d4af37;
